Project

General

Profile

Actions

Bug #22083

closed

rgw segfaults after running radosgw-admin data sync init

Added by Abhishek Lekshmanan over 6 years ago. Updated about 6 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
luminous,jewel
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

656         return shards[shard_id]->append(entry);
Missing separate debuginfos, use: zypper install krb5-debuginfo-1.12.5-9.1.x86_64 libblkid1-debuginfo-2.29.2-3.4.x86_64 libcurl4-debuginfo-7.37.0-23.1.x86_64 libexpat1-debuginfo-2.1.0-24.1.x86_64 libfreebl3-debuginfo-3.28.6-44.1.x86_64 libibverbs1-debuginfo-14-6.4.x86_64 libkeyutils1-debuginfo-1.5.9-7.13.x86_64 libldap-2_4-2-debuginfo-2.4.44-18.1.x86_64 libopenssl1_0_0-debuginfo-1.0.2j-10.1.x86_64 libpcre1-debuginfo-8.39-11.1.x86_64 libselinux1-debuginfo-2.5-4.17.x86_64 libsoftokn3-debuginfo-3.28.6-44.1.x86_64 liburcu0-debuginfo-debuginfo-0.8.8-5.3.x86_64 liburcu2-debuginfo-debuginfo-0.8.7-4.1.x86_64 libuuid1-debuginfo-2.29.2-3.4.x86_64 libz1-debuginfo-1.2.8-13.15.x86_64 mozilla-nspr-debuginfo-4.17-1.1.x86_64 mozilla-nss-debuginfo-3.33-2.1.x86_64
(gdb) bt
#0  0x00005555560c7feb in RGWShardedOmapCRManager::append (this=0x555557373c40, entry=..., shard_id=107) at /ssd/builds/cpp/ceph_cmake_new/src/rgw/rgw_cr_rados.h:656
#1  0x000055555610576c in RGWListBucketIndexesCR::operate (this=0x555557263000) at /ssd/builds/cpp/ceph_cmake_new/src/rgw/rgw_data_sync.cc:773
#2  0x0000555555e5004d in RGWCoroutinesStack::operate (this=0x55555719f9c0, _env=0x7fffcb2a1cb0) at /ssd/builds/cpp/ceph_cmake_new/src/rgw/rgw_coroutine.cc:195
#3  0x0000555555e5187f in RGWCoroutinesManager::run (this=0x555557058388, stacks=...) at /ssd/builds/cpp/ceph_cmake_new/src/rgw/rgw_coroutine.cc:485
#4  0x0000555555e52ba7 in RGWCoroutinesManager::run (this=0x555557058388, op=0x555557015000) at /ssd/builds/cpp/ceph_cmake_new/src/rgw/rgw_coroutine.cc:624
#5  0x00005555560f0513 in RGWRemoteDataLog::run_sync (this=0x555557058388, num_shards=128) at /ssd/builds/cpp/ceph_cmake_new/src/rgw/rgw_data_sync.cc:1645
#6  0x0000555555f38522 in RGWDataSyncStatusManager::run (this=0x555557058330) at /ssd/builds/cpp/ceph_cmake_new/src/rgw/rgw_data_sync.h:320
#7  0x0000555555f3a587 in RGWDataSyncProcessorThread::process (this=0x555557058300) at /ssd/builds/cpp/ceph_cmake_new/src/rgw/rgw_rados.cc:3241
#8  0x0000555555edb7f8 in RGWRadosThread::Worker::entry (this=0x555556eba220) at /ssd/builds/cpp/ceph_cmake_new/src/rgw/rgw_rados.cc:3049
#9  0x00007fffedf59639 in Thread::entry_wrapper (this=0x555556eba220) at /ssd/builds/cpp/ceph_cmake_new/src/common/Thread.cc:79
#10 0x00007fffedf5956e in Thread::_entry_func (arg=0x555556eba220) at /ssd/builds/cpp/ceph_cmake_new/src/common/Thread.cc:59
#11 0x00007ffff6b0c744 in start_thread (arg=0x7fffcb2a4700) at pthread_create.c:334
#12 0x00007fffe9f36aad in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

https://github.com/ceph/ceph/pull/18852
https://github.com/ceph/ceph/pull/18883


Related issues 2 (0 open2 closed)

Copied to rgw - Backport #22181: luminous: rgw segfaults after running radosgw-admin data sync init ResolvedNathan CutlerActions
Copied to rgw - Backport #22182: jewel: rgw segfaults after running radosgw-admin data sync init ResolvedOrit WassermanActions
Actions #1

Updated by Abhishek Lekshmanan over 6 years ago

  • Subject changed from rgw segfaults after data sync init to rgw segfaults after running radosgw-admin data sync init
Actions #3

Updated by Orit Wasserman over 6 years ago

  • Backport set to luminous,jewel
Actions #4

Updated by Yuri Weinstein over 6 years ago

Casey Bodley wrote:

https://github.com/ceph/ceph/pull/18852

merged

Actions #5

Updated by Casey Bodley over 6 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #6

Updated by Casey Bodley over 6 years ago

  • Status changed from Pending Backport to 7
Actions #7

Updated by Casey Bodley over 6 years ago

  • Description updated (diff)
  • Status changed from 7 to Pending Backport
Actions #8

Updated by Nathan Cutler over 6 years ago

  • Copied to Backport #22181: luminous: rgw segfaults after running radosgw-admin data sync init added
Actions #9

Updated by Nathan Cutler over 6 years ago

  • Copied to Backport #22182: jewel: rgw segfaults after running radosgw-admin data sync init added
Actions #10

Updated by Nathan Cutler about 6 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF